k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: notification
          image: gitlab.lnu.se:5050/2dv013/student/am224wd/part2-architecture/kuberneterized-web-application/notification
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
