k8s/notifications.yaml
# notifications.yaml

apiVersion: v1
kind: Service
metadata:
  name: notifications
spec:
  ports:
    - name: "notif-port"
      port: 3001
      targetPort: notif-http
  selector:
    app: notifications
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
spec:
  replicas: 2  # Multiple instances 
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: gitlab.lnu.se:5050/2dv013/student/am224wd/part2-architecture/kuberneterized-web-application/taskit
          # command: ["npm", "run", "start-notification-service"]
          ports:
            - containerPort: 3001
              name: notif-http
      imagePullSecrets:
        - name: regcred
