k8s/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: gitlab.lnu.se:5050/2dv013/student/am224wd/part2-architecture/kuberneterized-web-application/queue
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: queue
spec:
  selector:
    app: queue
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
