k8s/taskit.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: taskit
  name: taskit
spec:
  ports:
    - name: "task-it-port"
      port: 8888
      targetPort: taskit-http
  selector:
    deployment.name: taskit
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskit
  namespace: default
spec:
  replicas: 1 # Update to 3 to get stateful proplems. Look at flash messages.
  selector:
    matchLabels:
      deployment.name: taskit
  template:
    metadata:
      labels:
        deployment.name: taskit
    spec:
      containers:
      - name: taskit
        #image: taskit
        image: gitlab.lnu.se:5050/2dv013/content/examples/example-kuberneterized-web-application/taskit # Update to your project url
        ports:
          - containerPort: 3000
            name: taskit-http
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
